--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.1",
+    "helmet-csp": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
